MEX-file: disable warning for "long long"
... this is used in some Matlab header ...

--- a/mex/Makefile
+++ b/mex/Makefile
@@ -43,7 +43,7 @@ CXXFLAGS += -Wpointer-arith
 CXXFLAGS += -Wcast-align
 CXXFLAGS += -Wwrite-strings
 CXXFLAGS += -Wredundant-decls
-CXXFLAGS += -Wlong-long
+#CXXFLAGS += -Wlong-long
 #CXXFLAGS += -Wconversion
 #CXXFLAGS += -Wsign-conversion
 #CXXFLAGS += -Wshadow
