Add config file option LOOP

--- a/data/ssr.conf.example
+++ b/data/ssr.conf.example
@@ -97,3 +97,6 @@
 #VERBOSE = "1"
 
 ################################################################################
+
+# Loop audio files (individually, not synchronized!)
+#LOOP = yes
