--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,7 @@ AC_PREREQ([2.65])
 dnl initialize autoconf, this should be the first thing in configure.ac
 dnl arguments: full package name, version, email address for bug reports,
 dnl tarball name, homepage
-AC_INIT([SoundScape Renderer],
+AC_INIT([SSR (SoundScape Renderer)],
         [m4_esyscmd_s([git describe || date +$USER%Y%m%d%H%M])],
         [ssr@spatialaudio.net],
         [ssr],
