Remove compile-time check for _REENTRANT
This caused problems on OSX:
https://groups.google.com/d/msgid/SoundScapeRenderer/2fd11dfa-05da-43b6-8d0a-d771d11b3a1d%40googlegroups.com

Using -pthread should define the necessary things on GCC and clang.

--- a/configure.ac
+++ b/configure.ac
@@ -245,8 +245,9 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM(
   AC_MSG_ERROR([core/1123 not implemented! Please upgrade.])
 ])
 
-# on some systems this is needed, on the others it doesn't hurt:
-AC_SEARCH_LIBS([pthread_join], [pthread], , [have_ip_interface=no])
+dnl NOTE: -pthread works on GCC, other compilers may need differnt flags!
+AS_IF([test x$GCC = xyes -a x$usercxxflags = xno],
+      [CXXFLAGS="$CXXFLAGS -pthread"])
 
 ENABLE_AUTO([optimization], [code optimization],
 [
