--- a/data/ssr.conf.example
+++ b/data/ssr.conf.example
@@ -84,6 +84,10 @@
 # Listening server port
 #SERVER_PORT = 8443
 
+# ASCII code of character to end messages with (binary zero: 0; new line: 10; 
+# carriage return: 13)
+#END_OF_MESSAGE_CHARACTER = 10
+
 ############################## Verbosity Level #################################
 
 # Set the level of system information
