Change default locale help2man
`en` is not a valid locale, at least, not on my system (`locale -a`).
Because of unicode characters we prefer to use a unicode character set, like provided by the en_US.UTF8 locale, but without actually affecting other locale settings besides the character set.
This changes the default locale to `C.UTF-8` and falls back on `C` in case the former is unavailable. Furthermore, the environment variable HELP2MAN_LOCALE is provided to set another locale.

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -21,10 +21,14 @@ RENDERER_TEXT = "manual page for the \
 # Note the order of SUBDIRS in the top-level Makefile.
 #
 # "make" must be called before "make dist", there is no automatic dependency!
+HELP2MAN_LOCALE ?= $(shell locale -a | egrep "C.UTF-8" || echo "C")
 
-$(dist_man_MANS): $(top_srcdir)/src/configuration.cpp $(top_srcdir)/configure.ac
-	help2man --no-info --name=$(RENDERER_TEXT) --output=$@ --locale=en \
-		$(top_builddir)/src/$(@:.1=$(EXEEXT))
+$(dist_man_MANS): $(top_srcdir)/src/configuration.cpp $(top_srcdir)/configure.ac 
+	help2man \
+		--no-info \
+                --name=$(RENDERER_TEXT) \
+                --output=$@ \
+                --locale=$(HELP2MAN_LOCALE) $(top_builddir)/src/$(@:.1=$(EXEEXT))
 
 ## Settings for Vim (http://www.vim.org/), please do not remove:
 ## vim:textwidth=80:comments+=bO\:##
