Restore PKG_FLAGS

--- a/configure.ac
+++ b/configure.ac
@@ -487,8 +487,8 @@ AS_IF([test x$have_gui = xyes],
 [
   # settings for Qt
   LIBS="$LIBS $QT_LIBS"
-  # add -fPIC flag to satisfy qt on linux
-  AC_MSG_CHECKING([Checking whether we have to add -fPIC flag to make Qt happy - ])
+  PKG_FLAGS="$PKG_FLAGS $QT_CFLAGS"
+  AC_MSG_CHECKING([Do we have to add -fPIC flag to make Qt happy])
   CPPFLAGS_backup="$CPPFLAGS"
   CPPFLAGS="$CPPFLAGS $QT_CFLAGS"
   AC_COMPILE_IFELSE([AC_LANG_PROGRAM(
