.gitignore: Adding entries for local build, ctags and compile_commands
Removing qt4 patch file from .gitignore.
Removing all non autogen.sh generated files (except tags file).
Removing user specific and accidental adds.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-ssr_scene_autosave.asd
+Makefile.in
+aclocal.m4
+autom4te.cache/
+autotools/
+configure
+data/MacOSX/Makefile.in
+data/Makefile.in
+man/Makefile.in
+src/Makefile.in
+src/config.h.in
