configure.ac: Adding check for liblo headers.

--- a/configure.ac
+++ b/configure.ac
@@ -521,6 +521,14 @@ ENABLE_EXPLICIT([floating-control-panel], [separate control window],
 [
   AS_IF([test x$have_gui = xno], [have_floating_control_panel=no])
 ])
+dnl check for liblo
+ENABLE_FORCED([osc-interface], [OSC interface],
+  [
+  AC_CHECK_HEADER([lo/lo.h], , [have_osc_interface=no])
+  AC_CHECK_HEADER([lo/lo_cpp.h], , [have_osc_interface=no])
+  AC_MSG_RESULT([$have_osc_interface])
+  ]
+)
 
 ENABLE_FORCED([ip-interface], [network (TCP/IP) interface],
 [
@@ -770,6 +778,7 @@ echo "|    VRPN ................................ : $have_vrpn"
 echo "|"
 echo "| Build with Ecasound support ............ : $have_ecasound"
 echo "| Build with IP interface ................ : $have_ip_interface"
+echo "| Build with OSC interface ............... : $have_osc_interface"
 echo "| Build with GUI ......................... : $gui_string"
 echo "|"
 echo "| Enable debugging/optimization .......... : $have_debugging/$have_optimization"
