configure.ac: Adding linker flag for liblo.

--- a/configure.ac
+++ b/configure.ac
@@ -524,6 +524,7 @@ ENABLE_EXPLICIT([floating-control-panel], [separate control window],
 dnl check for liblo
 ENABLE_FORCED([osc-interface], [OSC interface],
   [
+  CPPFLAGS="$CPPFLAGS -llo"
   AC_CHECK_HEADER([lo/lo.h], , [have_osc_interface=no])
   AC_CHECK_HEADER([lo/lo_cpp.h], , [have_osc_interface=no])
   AC_MSG_RESULT([$have_osc_interface])
